:bug: fixing url jupyter

--- a/_posts/2020-10-12-TSAP.md
+++ b/_posts/2020-10-12-TSAP.md
@@ -8,13 +8,14 @@ header:
 excerpt: "Wrangling Financial Returns with Pandas"
 ---
 
-## Intro
+## Data
 
-The data we wish to investigate is related to three stocks quoted in the NASDAQ 100 index, namely Apple, Google and
-Facebook, observed in the period Jan-Sept 2020.
-The different sources of data are stored in three different `.csv` files. Using the Pandas `.read_csv()` function,
-we read them and store each of them into `aapl_df`, `googl_df`, and `fb_df`, respectively.
-Each of the above dataset contains different trading information on the corresponding stocks, identified by the column `Symbol`,
+The data we wish to investigate are related to three stocks quoted in the NASDAQ 100 index, namely Apple, Google and
+Facebook, observed in the period Jan-Sept 2020. They are stored in three different `.csv` files, which
+can be read and stored using the pandas `.read_csv()` function into `aapl_df`, `googl_df`, and `fb_df`, respectively.
+
+
+Each of them contains different trading information on the corresponding stocks, identified by the column `Symbol`,
 such as their trading date, represented by `Date`, the highest and lowest price observed in that trading session,
 represented by	the column `High` and `Low` respectively, the opening and closing price, represented by `Open` and	`Close`,
 and finally their observed `Volume` in each session.
@@ -147,12 +148,12 @@ index one will be repeated thrice in `df_all`.
 The dataset stored in `df_all` is a tidy dataset. We now want to perform aggregating operations with respect to
 the `Close` price column, say creating a new `pandas.DataFrame` object containing as index the `Date` and as columns the `Stock`.
 
-This is easily performed by applying the `pivot_table()` method on the `df_all`, which requires three arguments:
+This is easily performed by applying the `pivot()` method on the `df_all`, which requires three arguments:
  * `index`: the column we wish to have as index of the new dataframe - in this case `Date`; <br>
  * `columns`: the column we wish to have as columns of the new dataframe - in this case `Symbol`; <br>
  * `values`: the column we wish to have as values of the new dataframe - in this case `Close`. <br>
 
-The resulting dataframe will is stored into the object `pivot_close`.
+The resulting dataframe is stored into the object `pivot_close`.
 At the end, we sort the index using the `sort_index()` method so that we are sure the index is correctly ordered in ascending order.
 
 ```python
@@ -504,7 +505,7 @@ In this post, we have understood how to employ `pandas` to perform exploratory f
 * how to compute log returns, and the corresponding cumulative returns.
 
 I hope you have enjoyed it. If you are interested in replicating the results shown here, you can find
-[here](https://github.com/andreagiussani/the-long-beard-blog/blob/master/src/2020-10-12-TSAP.ipynb) the source code of this post. See you in the next post!
+[here](https://github.com/andreagiussani/the-long-beard-blog/blob/master/_jupyter/2020-10-12-TSAP.ipynb) the source code of this post. See you in the next post!
 
 ## Datasets:
 * [Apple Stock (Jan-Sept 2020)](https://github.com/andreagiussani/datasets/blob/main/financial_returns_pandas/data/AAPL.csv)
