--- a/_posts/2020-10-20-PT01.md
+++ b/_posts/2020-10-20-PT01.md
@@ -1,7 +1,7 @@
 ---
 title: "5 awesome tips about Pandas"
 date: 2020-10-20
-tags: [Python]
+tags: [Pandas]
 categories: [Intermediate]
 header:
   images:
