:card_index: renaming sections

--- a/_posts/2020-10-20-PT01.md
+++ b/_posts/2020-10-20-PT01.md
@@ -158,7 +158,7 @@ The `prices_df` is given below for the sake of completeness:
 </div>
 
 
-## 1. The `df.eval()` method
+## 1. The `.eval()` method
 Although this function is still not very popular among Data Scientists, it is worth to notice that this is used in the backend of many of the most popular pandas functions. But what does it perform? Well, it is used to evaluate arithmetic expressions involving operations between columns of the given dataframe. Typically, we pass to the `.eval()` method a string, which contains the expressions we wish to evaluate on our dataframe. The reason is that this method is based on the [`numexpr`](https://github.com/pydata/numexpr) backend.
 
 As an example, we might want to compute the total daily revenues per item. To do so, we can employ the `.eval()` on the `sales_df` as follows:
@@ -259,7 +259,7 @@ sales_df.eval("Total = Lemon + Apple + Orange + Banana + Mango", inplace=True)
 ```
 
 
-## 2. The `df.query()` method
+## 2. The `.query()` method
 
 This is my favourite one: it is based on the `eval()` method, and it is used to filter the dataframe based on a given expression. Since the backend is still the `numexpr`, we need to pass the expression to this method as a string.
 
@@ -377,7 +377,7 @@ sales_df.query("Total >= @condition & Mango >15")
 
 Note that we could have written `sales_df[(sales_df['Total']>=50)&(sales_df['Mango']>15)]` to perform the same operation. Honestly, apart from the performance issue, I found the first one not easy to read, especially when the number of conditions increases. With the `.query()` method, everything gets simpler and more efficient.
 
-## 3. The `df.lookup()` method
+## 3. The `.lookup()` method
 
 Let us consider a slightly different dataset, which basically consists of the `sales_df` with an extra column, named `"Best"`: this column represents the category of fruits that was sold the most in that particular day.
 
@@ -522,7 +522,7 @@ The expected result is shown in the following table:
 </div>
 
 
-## 4. The `df.where()` method
+## 4. The `.where()` method
 This method can be extremely useful in the initial (or exploration) phase of a dataset, especially if you want to get both the total non-null values and their specific values, given a specific condition. Indeed, the `.where()` simply replaces with a null value the rows for which the condition is not satisfied, whereas it retains the original values when the condition is `True`.
 
 For instance, if you want to verify when the column `"Best Quantity"` is greater than 25, then you can simply use the `.where()` method, which requires a boolean condition to be verified.
@@ -658,7 +658,7 @@ sales_best_df.mask(sales_best_df['Best Quantity'] > 25, 0)['Mango']
 ```
 
 
-## 5. The `df.select_dtypes()` method
+## 5. The `.select_dtypes()` method
 
 This is a nice one. Typically, we have to decide whether to include or not variables of type object inside our analysis. Obviously, one way to convert those variables into a proper form is via *One-hot Encoding*, which is performed via the `pd.get_dummies()` function. However, sometimes we just want to remove them, since they would not bring us useful information. To do so, we can control the columns' type to include via the `.select_dtypes()` method.
 
