:bug: fix typos and url five tips in pandas

--- a/_posts/2020-10-20-PT01.md
+++ b/_posts/2020-10-20-PT01.md
@@ -12,10 +12,10 @@ excerpt: "5 awesome tips about Pandas"
 Pandas is probably one of the most important python libraries for Data Science, and honestly it has saved my life many times: I really love it, and I tend to use a lot it in any project I am directly involved.
 This is to say that it is always present in any `requirements.txt` file I typically have to write when I set up a project.
 
-The great thing about pandas is that it is simple and it comes with a great (documentation)[https://pandas.pydata.org/docs/], and its growing popularity within the
+The great thing about pandas is that it is simple and it comes with a great [documentation](https://pandas.pydata.org/docs/), and its growing popularity within the
 Data Science community has been a driving force for ever more efficient code production.
 
-However, whenever I analyse panda-based code, what I observe is the fact that people tend to use standard panda techniques to perform operations within (and between) data frames. This is really fine, but I think most of them are unaware that these methods could be incredibly inefficient as the row size of the dataset gets bigger and bigger.
+However, whenever I analyse pandas-based code, what I observe is the fact that people tend to use standard pandas techniques to perform operations within (and between) data frames. This is really fine, but I think most of them are not aware that these methods could be incredibly inefficient as the row size of the dataset gets bigger and bigger.
 
 The purpose of this post is to reveal some advanced tips that any data science developer should know to run efficiently more complex operations with pandas. So, let's dive into them.
 
