:bug: fix typos and url five tips in pandas

--- a/_posts/2020-10-20-PT01.md
+++ b/_posts/2020-10-20-PT01.md
@@ -375,7 +375,7 @@ sales_df.query("Total >= @condition & Mango >15")
 
 
 
-Note that we could have written `sales_df[(sales_df['Total']>=50)&(sales_df['Mango']>15)]` to perform the same operation. Honestly, apart from the performance issue, I found the first one not easy to read, especially when the number of conditions increases. With the `.query()` method, everything gets simpler and more efficient.
+Note that we could have written `sales_df[(sales_df['Total']>=50)&(sales_df['Mango']>15)]` to perform the same operation. Honestly, apart from the performance issue, I found this one not easy to read, especially when the number of conditions increases. With the `.query()` method, everything gets simpler and more efficient.
 
 ## 3. The `.lookup()` method
 
