--- a/_posts/2020-10-25-ABC01.md
+++ b/_posts/2020-10-25-ABC01.md
@@ -1,6 +1,6 @@
 ---
 title: "An Introduction to Approximate Bayesian Computation"
-date: 2020-10-20
+date: 2020-10-25
 tags: [Statistics]
 categories: [Advanced]
 header:
@@ -51,7 +51,7 @@ To obtain a sample from $\pi_{\epsilon}\left(\theta \vert x^{\ast}\right)$, we u
 Note that in the case $\epsilon = 0$, the ABC algorithm reduces to a standard rejection algorithm, i.e. a Gibbs Sampler. Thus we accept not only those simulations which result in a summary statistic which agrees with $T(x^{\ast})$ but all those simulations within a distance $\epsilon$. There is a compromise in the choice of $\epsilon$: the larger $\epsilon$, the more efficient the algorithm is in terms of the acceptance probability but the greater the bias (the approximation in the posterior distribution). Choosing $\epsilon$ small is liable to have a large Monte-Carlo error because a small acceptance probability leads to a large variance of the corresponding estimator. This is because the number of accepted values, the sample used for estimating the parameter is small.
 
 
-## The Algorithm in Practice:
+## The Algorithm in Practice
 A data set contains the genetic linkage of 197 animals, in which the animals are distributed into 4 categories, labeled 1 through to 4. Let $y_i$ denote the total number of animals in category i, and let $p_i$ be the probability that an animal belongs to category i, with $i=1,2,3,4$.
 
 Suppose that
@@ -126,6 +126,8 @@ To perform this simulation using python, I have written a custom method called `
   </tbody>
 </table>
 </div>
+
+The whole simulated $\theta$ and distance values are shown in the next plot:
 
 <img src="/the-long-beard-blog/assets/images/2020-10-25-ABC01/output_6_0.png">
 
