:fire: adding description

--- a/_jupyter/2020-10-12-TSAP.ipynb
+++ b/_jupyter/2020-10-12-TSAP.ipynb
@@ -1,5 +1,14 @@
 {
  "cells": [
+   {
+    "cell_type": "markdown",
+    "metadata": {},
+    "source": [
+     "## Title: Introduction to Approximate Bayesian Computation\n",
+     "### Author: Andrea Giussani\n",
+     "#### Series in \"The Long Beard Blog\" - Oct 2020"
+    ]
+   },
   {
    "cell_type": "markdown",
    "metadata": {},
