--- a/_jupyter/2020-10-20-PT01.ipynb
+++ b/_jupyter/2020-10-20-PT01.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+    "cell_type": "markdown",
+    "metadata": {},
+    "source": [
+     "## Title: Introduction to Approximate Bayesian Computation\n",
+     "### Author: Andrea Giussani\n",
+     "#### Series in \"The Long Beard Blog\" - Oct 2020"
+    ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
