--- a/_posts/2020-10-25-ABC01.md
+++ b/_posts/2020-10-25-ABC01.md
@@ -37,7 +37,7 @@ Let T(x) denote a sufficient summary statistic of the data x.
 Typically, when ABC is used it is not always possible to identify sufficient statistics, since the likelihood can not be written down.
 
 Notably, however, to generate samples from the posterior distribution, we need to approximate it. Let $d(\cdot, \cdot)$ denote a distance metric. Then for $\epsilon \geq 0$, define the $\epsilon$ approximate posterior distribution, $\pi_{\epsilon}\left(\theta \vert x^{\ast}\right)$, as follows:
-$$\pi_{\epsilon}\left(\theta \vert x^{\ast}\right) \propto  \pi(\theta) \int_{\Lambda} \pi(T(x)) \vert \theta) d\theta$$
+$$\pi_{\epsilon}\left(\theta \vert x^{\ast}\right) \propto  \pi(\theta) \int_{\Lambda} \pi(T(x) \vert \theta) d\theta$$
 
 where $\Lambda := \left( x: x \in d(T(x), T(x^{\ast}) \leq \epsilon)\right)$.
 
