:pencil: improving subtitle

--- a/_posts/2020-11-08-ML01.md
+++ b/_posts/2020-11-08-ML01.md
@@ -5,7 +5,7 @@ tags: [Machine Learning, Scikit-learn, Python]
 categories: [Beginner]
 header:
   images:
-excerpt: "In this post we explore standard preprocessing techniques that should be used in any Machine Learning Pipeline "
+excerpt: "In this post we explore standard preprocessing techniques that should be used as first step in a Machine Learning Pipeline."
 ---
 
 ### Introduction
