--- a/_posts/2020-10-20-PT01.md
+++ b/_posts/2020-10-20-PT01.md
@@ -167,10 +167,10 @@ As an example, we might want to compute the total daily revenues per item. To do
 ```python
 for row in prices_df.itertuples():
     col_name = row[1] + ' ' + 'Revenues'
-    sales_df[col_name] = pd.eval("sales_df[row[1]]*row[2]")
+    sales_df[col_name] = pd.eval("row[1]*row[2]")
 ```
 
-The above snippet basically appends to the `sales_df` a revenues' column for each fruit item involved. In particular, we see that the `eval()` takes a string made of the expression `"sales_df[row[1]]*row[2]"`: since, by default, the parser is `pandas`, this operation will be applied row-wise.
+The above snippet basically appends to the `sales_df` a revenues' column for each fruit item involved. In particular, we see that the `eval()` takes a string made of the expression `"row[1]*row[2]"`: since, by default, the parser is `pandas`, this operation will be applied row-wise.
 
 A simple inspection of the new columns confirms our expectations.
 
