:pencil: adding dataset link

--- a/_posts/2021-02-17-DA01.md
+++ b/_posts/2021-02-17-DA01.md
@@ -16,7 +16,7 @@ In this post, we are going to explore advanced data manipulation techniques that
 
 To perform this analysis, we will use the Python language, and we will explore two of the most important data analytics libraries: Pandas and Matplotlib.
 
-Here i will just report the most important insights from the analysis. You can however check the source code to better understand the corresponding code source [here](https://github.com/andreagiussani/miscellaneous/blob/main/the-long-beard-blog/src/2021-02-17-DA01.ipynb).
+Here i will just report the most important insights from the analysis. You can however check the source code to better understand the corresponding code source [here](https://github.com/andreagiussani/miscellaneous/blob/main/the-long-beard-blog/src/2021-02-17-DA01.ipynb). The data required for this analysis can be found at this [stable link](https://github.com/andreagiussani/datasets/tree/main/video_games_analysis).
 
 
 
