:pencil: improving content

--- a/_posts/2021-02-17-DA01.md
+++ b/_posts/2021-02-17-DA01.md
@@ -19,7 +19,6 @@ To perform this analysis, we will use the Python language, and we will explore t
 Here i will just report the most important insights from the analysis. You can however check the source code to better understand the corresponding code source [here](https://github.com/andreagiussani/miscellaneous/blob/main/the-long-beard-blog/src/2021-02-17-DA01.ipynb). The data required for this analysis can be found at this [stable link](https://github.com/andreagiussani/datasets/tree/main/video_games_analysis).
 
 
-
 ## 1. Data Manipulation and Cleaning
 
 ### 1.1 Data Ingestion
@@ -31,12 +30,7 @@ We read the file `'data/vgsales.csv'` using the pandas `read_csv()` function, an
 data = pd.read_csv('data/vgsales.csv')
 ```
 
-We now check the overall composition of the dataset using the `.info()` method
-
-
-```python
-data.info()
-```
+We now check the overall composition of the dataset using the `.info()` method. The dataset contains sales information, divided by region, for different video games by year. This dataset is not the most updated, but it covers titles until 2016.
 
     <class 'pandas.core.frame.DataFrame'>
     RangeIndex: 16598 entries, 0 to 16597
@@ -319,7 +313,7 @@ for _, row in most_popular_platform_by_year.iterrows():
     most_popular_games = most_popular_games.append(merging_dfs)
 ```
 
-The result is as follows:
+As we can see from the output shown here below, there are many famous titles: from _Pac-Man_ to the _Legend of Zelda_ in the 80's; the 90's are obviously identified by the _Super Mario_ saga, but interestingly the most title for that particular decade was _Gran Turismo_: what a game! I still remember it. For that time, that game was absolutely a breakthrough! Also note that in 1995 Sony released _Playstation 1_, and not surprisingly games related to that platform were the most sold in the second half of the 90's.
 
 <div>
 <style scoped>
@@ -538,9 +532,9 @@ The result is as follows:
 </table>
 </div>
 
+Also, moving to modern times we see that GTA V was quite a popular game, and without any surprise the popular _Call of Duty: Black Ops 3_, which was a very good game from Activision.
 
-
-whereas the following one shows the most sold Title by Platform: this can be easily obtained using simple data manipulation. Interestngly, GTA V was the most sold title for both PS3 and PS4: unbelivable!
+Given the above results, we can perform a little bit of data manipulation, and we can get the following result, which shows the most sold Title by Platform. Interestngly, GTA V was the most sold title for both PS3 and PS4: unbelivable!
 
 
 <div>
@@ -615,7 +609,8 @@ whereas the following one shows the most sold Title by Platform: this can be eas
 </table>
 </div>
 
-Surprisingly none of the super marios is mentioned in this list! To conclude, which are the most sold videogames ever?
+Surprisingly none of the _Super Marios_ is mentioned in this list! Hence, we can conclude woth the following analysis: which were the most sold videogames ever?
+
 We are interesting in investigating which were the most sold titles in the last 40 years. To do so, we employ the `.groupby()` method, and store the result into the `most_wanted_vg` variable.
 
 
@@ -623,17 +618,14 @@ We are interesting in investigating which were the most sold titles in the last 
 most_wanted_vg = filtered_data_top20[
     ['Name', 'Global_Sales']
 ].groupby('Global_Sales').sum()
-```
 
-
-```python
 most_wanted_vg.sort_values(
   by='Global_Sales',
   ascending=False
 ).head(10)
 ```
 
-
+The result is shown here below:
 
 
 <div>
@@ -706,11 +698,11 @@ most_wanted_vg.sort_values(
 </table>
 </div>
 
-It looks like the nintendo games are the most sold! The Wii sports was such a huge success for Nintendo. The classic “Mario” games own 4 of Top 10 most popular games.
+It looks like the _Nintendo_ games were the most sold! The _Wii Sports_ was such a huge success for Nintendo. The classic _Mario_ games, however, own 4 of Top 10 most popular games.
 
 ### Conclusions
 
-I hope you have enjoyed this analysis: it shows how pandas and matplotlib are important to help you in the interpretability of the raw data.
+I hope you have enjoyed this analysis: it shows how pandas and Matplotlib are important to help you in the interpretability of the raw data.
 
 If you want to replicate the results seen in this post, please check the source code [here](https://github.com/andreagiussani/miscellaneous/blob/main/the-long-beard-blog/src/2021-02-17-DA01.ipynb).
 
