:bug: use FeatureUnion correctly

--- a/_posts/2020-11-08-ML01.md
+++ b/_posts/2020-11-08-ML01.md
@@ -102,11 +102,11 @@ It is recommended using the `FeatureUnion` object for two reasons:
 A simple implementation that sums up the aforementioned steps goes as follows:
 
 ```python
-from sklearn.pipeline import Pipeline
-transformer = Pipeline(
-    [
-      ('scaler', StandardScaler()),
-      ('pt', PowerTransformer(method='yeo-johnson')),
+from sklearn.pipeline import FeatureUnion
+transformer = FeatureUnion(
+    transformer_list=[
+        ('scaler', StandardScaler()),
+        ('pt', PowerTransformer()),
     ]
 )
 transformer = transformer.fit(boston)
