:hammer: improvements blog

--- a/_posts/2025-02-13-ML02.md
+++ b/_posts/2025-02-13-ML02.md
@@ -23,9 +23,23 @@ Normalizer is useful when:
 - You are using **cosine similarity** (e.g., in document retrieval or clustering).
 - You work with **TF-IDF** or **kernel methods** where normalization improves results.
 
-### 1.2 How Normalizer Works
+If you remember from [this blog post](https://andreagiussani.github.io/the-long-beard-blog/beginner/ML01/), a very popular choice of a transformer is the `StandardScaler`.
+However, it is important to notice that there is a quite crucial distinction between the well-known `StandardScaler` and the `Normalizer`.
 
-Normalizer transforms each row (sample) in the dataset to have **unit norm**, meaning that the sum of squared elements is equal to 1. The three common norms used are:
+| Feature             | Description                                                                 |
+|---------------------|-----------------------------------------------------------------------------|
+| **What it does**     | **StandardScaler**: Standardizes features (zero mean, unit variance)        |
+|                     | **Normalizer**: Normalizes each sample to unit norm                         |
+| **Applies to**       | **StandardScaler**: Columns (features)                                      |
+|                     | **Normalizer**: Rows (samples)                                              |
+| **Effect**           | **StandardScaler**: Adjusts feature distributions                           |
+|                     | **Normalizer**: Adjusts vector magnitudes                                   |
+| **When to use**      | **StandardScaler**: When features have different scales                     |
+|                     | **Normalizer**: When rows represent vectors that should have the same magnitude |
+
+
+
+Normalizer therefore transforms each row (sample) in the dataset to have **unit norm**, meaning that the sum of squared elements is equal to 1. The three common norms used are:
 - **L1 norm**: Scales values so their absolute sum is 1.
 - **L2 norm**: Scales values so their squared sum is 1 (default).
 - **Max norm**: Scales values by the maximum absolute value.
