:hammer: trigger new pipe

--- a/_posts/2025-01-23-DEV01.md
+++ b/_posts/2025-01-23-DEV01.md
@@ -45,7 +45,6 @@ rm -rf Gemfile.lock ~/.bundle ~/.gem
 gem cleanup
 ```
 
-
 ## **4️⃣ Installing Jekyll & GitHub Pages**
 Navigate to your blog directory:
 ```bash
@@ -74,4 +73,4 @@ If it works, congrats! 🎉 If not, check the error messages and retry updating 
 
 
 ## **Final Thoughts**
-Keep your Ruby environment clean, update dependencies when needed, and happy blogging! 🚀💻
+Keep your Ruby environment clean, update dependencies when needed, and happy blogging! 🚀
