:hammer: chore: aesthetics

--- a/_posts/2026-02-14-ML03.md
+++ b/_posts/2026-02-14-ML03.md
@@ -20,7 +20,7 @@ The key idea: cosine similarity cares about **direction**, not **size**.
 That’s why it is so common in text retrieval and clustering: a long document should not automatically look “more similar” just because it contains more words.
 
 ## What’s a vector, in plain English?
-A **vector** is just a list of numbers. We normally use vectors because computers do nott understand words directly but... they understand numbers. So we convert sentences into numbers that capture **what the object is about**.
+A vector is just a list of numbers. We normally use vectors because computers do nott understand words directly but... they understand numbers. So we convert sentences into numbers that capture **what the object is about**.
 
 ### A tiny text example
 Let’s pretend our entire vocabulary has only 4 words: pizza, sushi, soccer, finance. Now take two sentences:
@@ -38,7 +38,7 @@ Each position translates into “how much of that word is in the sentence”... 
 > With **TF-IDF**, you don’t just count words: you give higher weight to rare words and lower weight to very common ones. But the outcome is the same: you get a vector.
 
 ## So what does cosine similarity measure?
-Picture each vector as an **arrow** starting at the origin:
+Picture each vector as an arrow starting at the origin:
 
 - the **direction** of the arrow ≈ *what it talks about (topic)*
 - the **length** of the arrow ≈ *how much stuff is in it (document length, repetitions)*
@@ -46,9 +46,9 @@ Picture each vector as an **arrow** starting at the origin:
 Cosine similarity looks only at the **angle between the arrows**.
 
 ### The intuition
-- If two arrows point in the **same direction** → they’re very similar
-- If they’re **90° apart** → they’re unrelated
-- If they point in **opposite directions** → they’re “opposites” (rare in basic bag-of-words TF-IDF settings)
+- If two arrows point in the same direction → they are very similar
+- If they are 90° apart → they are unrelated
+- If they point in opposite directions → they are “opposites” (rare in basic bag-of-words TF-IDF settings)
 
 
 ## Why “cosine”? Because it’s literally the cosine of the angle
@@ -63,7 +63,6 @@ But you do not need to love the math. Here’s what it means:
 - what remains is basically: how aligned they are :rocket:
 
 ### A fast mental model
-
 Cosine similarity is like asking:
 
 > “Do these two texts have the same *shape of content*, even if one is longer?”
@@ -78,11 +77,9 @@ Different size. But if both are *80% chill jazz*, they feel similar.
 > “Do these two playlists have the same vibe / composition?”
 
 ## Cosine similarity with text (TF vs TF-IDF)
-
 To compute cosine similarity on text, we first need to transform text into vectors.
 
 ### Term Frequency (TF)
-
 TF simply counts how often a word appears in a document.
 
 ```python
@@ -104,7 +101,6 @@ S_tf = cosine_similarity(X_tf)
 TF can work, but it tends to overemphasize repetition and common words.
 
 ### TF-IDF (Term Frequency–Inverse Document Frequency)
-
 TF-IDF down-weights common words and up-weights more informative ones.
 
 ```python
@@ -117,12 +113,11 @@ S_tfidf = cosine_similarity(X_tfidf)
 
 
 ## Why normalization often shows up with cosine similarity
-
 Cosine similarity already focuses on direction (it divides by vector length). So why do we care about `Normalizer`?
 
 Two practical reasons:
 
-1. **Efficiency / convenience**: once vectors are L2-normalized, cosine similarity becomes just a dot product.
+1. **Efficiency/convenience**: once vectors are L2-normalized, cosine similarity becomes just a dot product.
 2. **Consistency in pipelines**: some workflows explicitly normalize to make the “unit-length vectors” assumption obvious and reproducible.
 
 In scikit-learn, TF-IDF can already do L2 normalization internally (`norm="l2"` is the default), but it’s useful to know what is happening.
@@ -143,5 +138,5 @@ X_tfidf_norm = pipeline.fit_transform(docs)
 ## Some Tips and Tricks
 
 * **Stopwords**: words like “is”, “a”, “the” can dominate counts unless you remove them or use TF-IDF.
-* **Empty / zero vectors**: if a document becomes empty after preprocessing, similarities can be undefined.
+* **Empty/zero vectors**: if a document becomes empty after preprocessing, similarities can be undefined.
 * **High similarity ≠ identical**: two texts can be aligned (same topic) but still differ in details.
