:hammer: chore: clean up

--- a/_posts/2026-02-22-ML04.md
+++ b/_posts/2026-02-22-ML04.md
@@ -79,7 +79,7 @@ X_miss.loc[mcar_mask, "MedInc"] = np.nan
 
 ### Typical strategy under MCAR
 
-* **Baseline**: `SimpleImputer` (mean/median/mode) often works fine.
+* `SimpleImputer` (mean/median/mode) often works fine.
 * Dropping rows/columns can be acceptable if missingness is small.
 
 
@@ -177,15 +177,15 @@ This is a simple random 10% missingness on a categorical column.
 
 # Conclusion
 
-Missing data is not just a preprocessing detail: it’s an **assumption** about how your dataset was generated.
+Missing data is not just a preprocessing detail: it’s an assumption about how your dataset was generated.
 
 - If missingness is **MCAR**, you mostly lose efficiency (more variance), and simple baselines often work.
 - If missingness is **MAR**, you can often do much better by using imputers that exploit relationships among observed features.
-- If missingness is **MNAR**, there is no free lunch: any imputation requires **extra assumptions**, so the right approach is usually transparency + sensitivity analysis.
+- If missingness is **MNAR**, there is no free lunch: any imputation requires extra assumptions, so the right approach is usually transparency + sensitivity analysis.
 
 In practice, you rarely know the true mechanism. A good workflow is:
 
-1. **Diagnose patterns** (missingness rates + correlations with observed features).
-2. Start with **simple baselines**.
-3. Compare stronger imputers **under cross-validation**.
-4. If MNAR is plausible, **report uncertainty** (don’t present a single imputed dataset as ground truth).
+1. Diagnose patterns (missingness rates + correlations with observed features).
+2. Start with simple baselines.
+3. Compare stronger imputers under cross-validation.
+4. If MNAR is plausible, report uncertainty*.
