:hammer: chore: add image to the post

--- a/_posts/2026-02-22-ML04.md
+++ b/_posts/2026-02-22-ML04.md
@@ -46,6 +46,7 @@ X.head()
 Because real datasets often have mixed types (numeric + categorical), and missingness can affect both.
 
 
+<img src="/the-long-beard-blog/assets/images/2026-02-22-ML04/missingness.png">
 ## The simulation: MCAR, MAR, MNAR-like
 
 We create a copy `X_miss` and inject missingness with specific rules.
