:hammer: chore: clean up

--- a/_posts/2026-02-22-ML04.md
+++ b/_posts/2026-02-22-ML04.md
@@ -189,4 +189,4 @@ In practice, you rarely know the true mechanism. A good workflow is:
 1. Diagnose patterns (missingness rates + correlations with observed features).
 2. Start with simple baselines.
 3. Compare stronger imputers under cross-validation.
-4. If MNAR is plausible, report uncertainty*.
+4. If MNAR is plausible, report uncertainty.
